<resources>
    <string name="app_name">NMedia</string>
    <string name="app_name_text">NMedia!</string>
    <string name="post_author">Netology.</string>
    <string name="post_published">21 may in 18:36</string>
    <string name="post_content">Hello, it\'s new Netology! -> \nhttp://netolo.gy/fyb</string>
    <string name="post_likes" translatable="false">10</string>
    <string name="post_reposts" translatable="false">5</string>
    <string name="post_views" translatable="false">5</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="post_tools_edit_message">Edit Message</string>
    <string name="description_post_avatar" translatable="false">post_avatar</string>
    <string name="description_tools_edit_icon" translatable="false">edit_icon</string>
    <string name="description_tools_edit_cancel_button" translatable="false">cancel_button</string>
    <string name="description_tools_edit_save_button" translatable="false">save_button</string>
    <string name="chooser_share_post">Share post</string>
    <string name="save">Save</string>
    <string name="hint_post_content">Input post content here</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="channel_remote_name">Notifications from server</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_api_unavailable">Google Play services Unavailable</string>
    <string name="notification_unknown_action">Notification with unknown action</string>
    <string name="notification_user_shared">%1$s shared a post</string>
    <string name="notification_user_posted">%1$s posted a new post:</string>
</resources>