<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/previewPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/m8"
    tools:context=".activity.FeedFragment">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="@dimen/m48"
        android:layout_height="@dimen/m48"
        android:contentDescription="@string/description_post_avatar"
        android:scaleType="center"
        android:src="@drawable/ic_avatar_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m8"
        android:layout_marginEnd="@dimen/m8"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/post_author"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/publishedTextView"
        app:layout_constraintEnd_toStartOf="@id/optionsMenuButton"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toTopOf="@id/avatarImageView" />

    <TextView
        android:id="@+id/publishedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_published"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        app:layout_constraintStart_toStartOf="@id/authorTextView"
        app:layout_constraintTop_toBottomOf="@id/authorTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/optionsMenuButton"
        style="@style/Widget.AppTheme.OptionsMenuButton"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        app:icon="@drawable/ic_options_menu_button_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/titleBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImageView,authorTextView,publishedTextView,optionsMenuButton" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m8"
        android:autoLink="web"
        android:text="@string/post_content"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/videoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBarrier" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="videoView,videoButton"
        app:layout_constraintBottom_toTopOf="@id/contentBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTextView" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m256"
        android:layout_marginTop="@dimen/m8"
        android:foreground="@mipmap/ic_video_preview"
        android:foregroundGravity="fill"
        app:layout_constraintBottom_toTopOf="@id/contentBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videoButton"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_play_filled_48"
        app:iconGravity="textStart"
        app:iconSize="@dimen/m48"
        app:layout_constraintBottom_toBottomOf="@id/videoView"
        app:layout_constraintEnd_toEndOf="@id/videoView"
        app:layout_constraintStart_toStartOf="@id/videoView"
        app:layout_constraintTop_toTopOf="@id/videoView" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/m8"
        app:constraint_referenced_ids="contentTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m8"
        android:checkable="true"
        android:textColor="@color/indigo_700"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        tools:text="@string/post_likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m8"
        android:textColor="@color/indigo_700"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintStart_toEndOf="@id/likeButton"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        tools:text="@string/post_reposts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsButton"
        style="@style/Widget.AppTheme.ViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m8"
        android:clickable="false"
        android:textColor="@color/indigo_700"
        app:icon="@drawable/ic_views_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        tools:text="@string/post_views" />

</androidx.constraintlayout.widget.ConstraintLayout>
