<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/commonSpacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:scaleType="center"
        android:src="@drawable/ic_avatar_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commonSpacing"
        android:layout_marginEnd="@dimen/commonSpacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/post_author"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/publishedTextView"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toTopOf="@id/avatarImageView" />

    <TextView
        android:id="@+id/publishedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_published"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        app:layout_constraintStart_toStartOf="@id/authorTextView"
        app:layout_constraintTop_toBottomOf="@id/authorTextView" />

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/titleBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImageView,authorTextView,publishedTextView,menuButton" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/post_content"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/contentBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/commonSpacing"
        app:constraint_referenced_ids="contentTextView" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonSpacing"
        android:layout_marginEnd="@dimen/commonSpacing"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_like_24"
        app:layout_constraintEnd_toStartOf="@+id/likeCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="@dimen/widgetWidth"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/commonSpacing"
        android:text="@string/post_likes"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@id/likeButton"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
        app:layout_constraintStart_toEndOf="@id/likeButton"
        app:layout_constraintTop_toTopOf="@id/likeButton" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/commonSpacing"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likeButton"
        app:layout_constraintEnd_toStartOf="@+id/shareCount"
        app:layout_constraintStart_toEndOf="@id/likeCount"
        app:layout_constraintTop_toTopOf="@id/likeButton" />

    <TextView
        android:id="@+id/shareCount"
        android:layout_width="@dimen/widgetWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commonSpacing"
        android:text="@string/post_reposts"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/shareButton"
        app:layout_constraintTop_toTopOf="@id/likeButton" />

    <ImageButton
        android:id="@+id/viewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/commonSpacing"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_views_24"
        app:layout_constraintBottom_toBottomOf="@id/likeButton"
        app:layout_constraintEnd_toStartOf="@+id/viewsCount"
        app:layout_constraintTop_toTopOf="@id/likeButton" />

    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="@dimen/widgetWidth"
        android:layout_height="wrap_content"
        android:text="@string/post_views"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@id/likeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
